Fix align .nav-links-ul in header
Forget to align. Fix complete

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
     justify-content: space-between;
     padding: 20px 100px;
     background-color: #1F2937;
+    align-items: center;
+
 }
 
 .company-logo {
@@ -30,4 +32,3 @@ a {
     text-decoration: none;
     color: white;
 }
-
